# pdf-book-configure

./: .gitignore  README.md  apply.py  extract.py  pyproject.toml  requirements.txt
